--- a/TestCom.ipynb
+++ b/TestCom.ipynb
@@ -60,12 +60,37 @@
    "source": [
     "print(\"dev.doSimpleAcquisition (3 frames @ 1 sec) - start\")\n",
     "rc = dev.doSimpleAcquisition(3, 1, pixet.PX_FTYPE_AUTODETECT, \"example.png\")\n",
+    "rc = dev.doSimpleAcquisition(3, 1, pixet.PX_FTYPE_TPX3_PIXELS_ASCII, \"test_2\")\n",
     "# rc = dev.doSimpleAcquisition(3, 1, pixet.PX_FTYPE_NONE, \"\") \n",
     "frame = dev.lastAcqFrameRefInc()\n",
     "print(\"dev.doSimpleAcquisition - end:\", rc, \"(0 is OK)\")\n",
     "\n",
     "pixet.exitPixet()\n",
     "pypixet.exit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first is same code as in the previous example, up to dev.setOperat...\n",
+    "import numpy as np\n",
+    "def clbACQ_FINISHED(cnt):\n",
+    "    print(\"ACQ_FINISHED\", cnt)\n",
+    "    frame = dev.lastAcqFrameRefInc()\n",
+    "    data = frame.data()\n",
+    "    print(\" Px val min:\", min(data), \", max:\", max(data))\n",
+    "    toplot = np.array(frame.data())\n",
+    "    final = np.reshape(toplot,(frame.width(), frame.height()))\n",
+    "    plt.imshow(final)\n",
+    "    plt.show()\n",
+    "    frame.destroy()\n",
+    "dev.registerEvent(pixet.PX_EVENT_ACQ_FINISHED, 0, clbACQ_FINISHED)\n",
+    "print(\"dev.doSimpleAcquisition (5 frames per 1 sec) - start\")\n",
+    "rc = dev.doSimpleAcquisition(5, 1, pixet.PX_FTYPE_NONE, \"\")\n",
+    "print(\"dev.doSimpleAcquisition - end:\", rc)"
    ]
   },
   {
